--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "echarts": "^3.4.0",
     "jquery": "^2.2.3",
     "vue": "^2.2.2",
     "vue-router": "^2.2.0",
